--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label for="numeroSolicitacao">Número da Solicitação:</label>
         <input type="text" id="numeroSolicitacao">
         <button onclick="buscarSolicitacao()">Buscar</button>
-        <button onclick="limparSolicitacao()">Limpar</button>
+        <button onclick="limparTudo()">Limpar</button>
         
         <div id="resultado"></div>
         
