--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
         </div>
     </div>
 
-    <!-- Rodapé com informações de contato -->
+    <!-- Rodapé fixo com design profissional -->
     <footer>
-        <h3>Fale com a Holambra</h3>
-        <p><strong>Telefone:</strong> 1437699500</p>
-        <p><strong>E-mail:</strong> Holambra@Holambra.com.br</p>
-        <p><strong>Localização:</strong> COOPERATIVA AGROINDUSTRIAL Unidade Matriz, Rod. Raposo Tavares, km 256 - Holambra II, Paranapanema - SP, 18725-000</p>
+        <div class="footer-content">
+            <h3>Fale com a Holambra</h3>
+            <p><strong>📞 Telefone:</strong> 14 3769-9500</p>
+            <p><strong>📧 E-mail:</strong> <a href="mailto:Holambra@Holambra.com.br">Holambra@Holambra.com.br</a></p>
+            <p><strong>📍 Localização:</strong> COOPERATIVA AGROINDUSTRIAL Unidade Matriz</p>
+            <p>Rod. Raposo Tavares, km 256 - Holambra II, Paranapanema - SP, 18725-000</p>
+        </div>
     </footer>
 </body>
 </html>
