--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <!-- Formulário de Apontamento -->
         <div id="formApontamento" style="display: none;">
             <h3>Apontamento de Serviço</h3>
-            <label>Dados e Hora Inicial:</label>
+            <label>Data e Hora Inicial:</label>
             <input type="datetime-local" id="dataHoraInicial">
-            <label>Dados e Hora Final:</label>
+            <label>Data e Hora Final:</label>
             <input type="datetime-local" id="dataHoraFinal">
             <label>Identificação do Manutentor:</label>
             <input type="text" id="manutentor">
