--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Apontamento de Serviço</h1>
         <label for="numeroSolicitacao">Número de Solicitação:</label>
         <input type="text" id="numeroSolicitacao">
-        <button onclick="buscarSolicitacao()">Buscar</button>
+        <button onclick="buscarSolicitacao()" aria-label="Buscar Solicitação">Buscar</button>
         <div id="resultado"></div>
 
         <!-- Formulário de Apontamento -->
