--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-            apiKey: "SUA_API_KEY",
-            authDomain: "SEU_AUTH_DOMAIN",
-            projectId: "SEU_PROJECT_ID",
-            storageBucket: "SEU_STORAGE_BUCKET",
-            messagingSenderId: "SEU_MESSAGING_SENDER_ID",
-            appId: "SEU_APP_ID",
-            measurementId: "SEU_MEASUREMENT_ID"
+            apiKey: "AIzaSyAUlxHPDSkSDoiXA4eg5BUW9sRxZfz9GI8",
+            authDomain: "apontamento-pcm-2fb0e.firebaseapp.com",
+            projectId: "apontamento-pcm-2fb0e",
+            storageBucket: "apontamento-pcm-2fb0e.firebasestorage.app",
+            messagingSenderId: "359651627373",
+            appId: "1:359651627373:web:b7e8e633348c83b5ee0a64"
         };
         
         // Inicialize o Firebase
